app/styles/main.css
[ng\:cloak],[ng-cloak],.ng-cloak{display:none !important}

.appLink {
  position: absolute;
  z-index: 1;
}

.animate-show {
  opacity: 1;
}

.animate-show.ng-hide-add, .animate-show.ng-hide-remove {
  transition: all linear 80ms;
}

.animate-show.ng-hide {
  opacity: 0;
}

select:disabled {
 -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
}

.leaflet-control-layers {
  visibility: hidden !important;
}

.fa-star, .fa-star-o {
  color: orange !important;
  font-family: 'FontAwesome';
}

.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

.tagline {
  padding-bottom: 0px;
}

html, body {
  overflow-x: hidden;
  overflow-y: hidden;
  padding: 0;
  margin: 0;
  height: 100%;
}

/* Remove ugly outline */
a, button {
  outline: 0 !important;
}
/* Centered text */
.text-centre {
  text-align: center;
  margin: 0;
  padding: 0;
}

/* Make the result view top a bit smaller */
.nav-tabs > li > a {
  padding: 7px 15px !important;
  margin-right: 0px;
}

.nav-tabs li {
  float: right;
}

.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
  border-bottom-color: rgb(221, 221, 221);
}

.sidebar-toggle {
  padding: 6px 8px;
}

/* Style the modal */

.modal-sm {
  min-width: 60vw;
  max-height: 90vh;
}

/* Get rid of ugly number input spinner in chrome and ff*/
input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    margin: 0;
}
input[type=number] {
    -moz-appearance:textfield;
}

/* Fade hiding animation in ng-repeat*/
.repeat-animate.ng-enter
{ 
 -webkit-transition: opacity cubic-bezier(0.250, 0.250, 0.750, 0.750) 0.1s;
  transition: opacity cubic-bezier(0.250, 0.250, 0.750, 0.750) 0.1s;
  opacity: 0;
} 

.repeat-animate.ng-enter-active {
    opacity: 1;
}


/* Container which centers content vertically and horizontally*/
.centre-container {
  display: flex;
  height: 100%;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  flex-wrap: nowrap;
}

.centre-content {
  text-align: center;
  width: 40%;
  padding-bottom: 100px;
}

.main-container {
  height: 100%;
  padding-top: 50px;
  box-sizing: border-box;
}

.stupid-adsbygoogle {
  position: absolute;
  bottom: 40px;
  height: 30vh;
  width: 60vw;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
}

/* Can be applied to any class to remove all padding*/
.nopadding {
   padding: 0 !important;
   margin: 0 !important;
}
.no-left-right-padding {
  padding-right: 0 !important;
  padding-left: 0 !important;
}
.no-up-down-padding {
  padding-top: 0 !important;
  padding-bottom: 0 !important;
  margin-top: 0 !important;
  margin-bottom: 0 !important;
}

/* Navbar brand stuff */
.navbar-default {
  font-size: 18px;
  margin-bottom: 0px;
  z-index: 10;
  position: absolute;
  width: 100%;
}
.navbar-default a:visited{
  color: white !important;
}
.navbar-default a:hover{
  color: #c1ffdc !important;
}
.navbar-default a:active{
  color: white !important;
}
.navbar-default {
  background-color: #0089CC;
  color: white;
}

.navbar-brand {
    color: white !important;
}
.navbar-brand-centred {
    position: absolute;
    left: 50%;
    display: block;
    padding-left: 0px;
    padding-right: 0px;
    width: 210px;
    text-align: center;
    font-size: 36px;
}
.navbar>.container-fluid .navbar-brand-centred {
  margin-left: -105px !important;
}
.navbar-default .navbar-toggle span {
  color: #0089CC;
}

.navbar-toggle {
  padding: 3px 6px;
  margin-right: 10px;
  background-color: white;
}

.navbar-collapse, .navbar-form {
  border-style: none;
  box-shadow: none;
}
.navbar>.container .navbar-brand-centred, 
.navbar>.container-fluid .navbar-brand-centred {
    margin-left: -125px;
}

/* My cool button */
.btn-cool {
  background-color: #28A15D;
  border-color: #036D31;
  color: white;
}
.btn-cool:visited {
  background-color: #28A15D;
  color: white;
}
.btn-cool:hover {
  background-color: #118945;
  color: white;
}
.btn-cool:active {
  color: white;
}
.btn-cool:focus {
  background-color: #118945;
  color: white;
}

#map_view {
  overflow-y: hidden;
}

/* Expand down the list and canvas */
.animate-expand-down {
  margin: 0;
  padding: 0;
  -webkit-transform-style: preserve-3d;
  -webkit-transition: max-height 0.5s;
  -moz-transition: max-height 0.5s;
  -ms-transition: max-height 0.5s;
  -o-transition: max-height 0.5s;
  transition: max-height 0.5s;
}
#practice-list {
  overflow: auto;
}
#map_canvas {
  overflow: hidden;
}

.active {
  -webkit-transform-style: preserve-3d;
  transition: background .4s linear;
  -webkit-transition-duration: 0.4s;
  -moz-transition-duration: 0.4s;
}

.hidden {
  display: none;
}

/* Custom page footer */
.footer {
  position: relative;
  height: 50px;
  margin-top: -50px;
  text-align: center;
  clear: both;
}
.fb-like{
  position: absolute !important;
  z-index: 1;
  top: 15px;
  left: 65px;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  .container {
    max-width: 730px;
  }

  .appLink {
    right: 0px;
    top: 5px;
  }
}

/* Navbar search stuff */
.navbar-form.ng-hide-add.ng-hide-add-active,
.navbar-form.ng-hide-remove.ng-hide-remove-active {
  -webkit-transition: 600ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
  -moz-transition: 600ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
  -ms-transition: 600ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
  -o-transition: 600ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
  transition: 600ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
}
.navbar-nav {
  padding: 0;
  margin: 0;
}
#info-button {
  width: 30px;
}

#info-button a {
  padding: 15px 10px;
}

.navbar-form.ng-hide {
  opacity: 0;
  line-height: 0;
  padding: 0 10px;
}

/* View transition stuff */
.view-animate {
  height: 100%;
}
.view-animate.ng-enter, .view-animate.ng-leave {
  transition: transform 500ms ease;
  -moz-transition: transform 500ms ease;
  -webkit-transition: transform 500ms ease;
  -webkit-transform-style: preserve-3d;
  -webkit-backface-visibility: hidden;
  -webkit-perspective: 1000;
  display:block;
  width:100%;
  position:absolute;
  top:0;
  left:0;
  right:0;
  bottom:0;
  padding: 0;
  margin: 0;
  padding-left:15px;
  padding-top:52px;
}
.view-animate.ng-enter{
  transform: translate3d(100%, 0, 0);
  -moz-transform: translate3d(100%, 0, 0);
  -webkit-transform: translate3d(100%, 0, 0);
}
.view-animate.ng-leave{
  transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  -webkit-transform: translate3d(0, 0, 0);
}
.view-animate.ng-leave.ng-leave-active {
  transform: translate3d(-100%, 0, 0);
  -moz-transform: translate3d(-100%, 0, 0);
  -webkit-transform: translate3d(-100%, 0, 0);
}
.view-animate.ng-enter.ng-enter-active {
  transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  -webkit-transform: translate3d(0, 0, 0);
}

/* Expand to full height */
.animate-expand {
  line-height: 25px;
  overflow: hidden;
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  transition: all 0.5s;
}
.animate-expand.ng-hide-add,
.animate-expand.ng-hide-remove {
  display: block !important;
  line-height: 0px;
}
.animate-expand.ng-hide-remove.ng-hide-remove-active {
  line-height: 25px;
}
.animate-expand.ng-hide-add {
  line-height: 25px;
}

.sidebar-offcanvas {
  transform: none;
}

#overlay { 
  display: none;
}

/*
 * Off Canvas
 * --------------------------------------------------
 */
@media screen and (max-width: 767px) {
  .appLink {
    right: -15px;
    bottom: 15px;
  }

  .appLink img {
    height: 100%;
    width: 80%;
  }

  .fb-like{
    left: 2px !important;
    top: auto;
    bottom: 5px;
  }
  .sidebar-offcanvas {
    position: absolute;
    -webkit-transform-style: preserve-3d;
    -webkit-transition: -webkit-transform .20s ease-out;
    -moz-transition: -moz-transform .20s ease-out;
    -ms-transition: -ms-transform .20s ease-out;
    -o-transition: -o-transform .20s ease-out;
    transition: transform .20s ease-out;
    box-shadow: 2px 0px 10px #888888;
    margin-top: 1px;
    z-index: 8;
    width: 90vw;
    background-color: white;
  }

  #overlay {
    -webkit-transform-style: preserve-3d;
    -webkit-transition: opacity .20s ease-out;
    -moz-transition: opacity .20s ease-out;
    -ms-transition: opacity.20s ease-out;
    -o-transition: opacity .20s ease-out;
    transition: opacity .20s ease-out;
    background-color: black;
    position: absolute;
    opacity: 0.4;
    height: 100vh;
    width: 100vw;
    z-index: 7;
    display: initial;
    overflow-y: hidden;
  }

}

.fa-window-close {
  cursor: pointer;
}

/* Font size and autocomplete size on really small screens*/
@media screen and (max-width: 420px) {

  .centre-content, .stupid-adsbygoogle {
    width: 80vw;
  }

  .stupid-adsbygoogle {
    height: 120px;
  }

  .modal-body {
    max-height: 80vh;
    overflow: auto;
  }
  .pac-container {
    width: 100% !important;
    left: 0px !important;
  }
  .tagline {
    padding-bottom: 30px;
  }
  .navbar-brand-centred {
    font-size: 28px;
    width: 170px;
  }
  .navbar>.container-fluid .navbar-brand-centred {
    margin-left: -80px !important;
  }

  ::-webkit-input-placeholder { font-size: 85%; }
  ::-moz-placeholder { font-size: 85%; }
  :-ms-input-placeholder { font-size: 85%; }
  input:-moz-placeholder { font-size: 85%; }

  h4 {
    font-size: 16px;
  }
}


/* Google Autocomplete stuff */
.big-autocomplete .pac-item {
  height: 50px !important;
  font-size: 16px !important;
}
.big-autocomplete .pac-item-query {
  font-size: 18px !important;
}

.small-autocomplete .pac-container {
  width: 24em !important;
}

